--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,27 @@
-<p>
-  search works!
-</p>
+<div class="container mt-30">
+    <div class="row">
+        <div class="col-md-3">
+            <label for="termino">Artist Seach</label>
+            <input [(ngModel)]="termino"
+                (keyup)="searchArtist()"
+                type="text" name="termino"
+                class="form-control"
+                value="Artist Search">
+            <hr>
+        </div>
+
+        <div class="col-md-9">
+            <div class="row">
+                <div class="col-md-3 text-center puntero"
+                        [routerLink]="['/artist',artist.id ]"
+                        *ngFor="let artist of _spotifyService.artists">
+                    <img [src]="artist.images | nofoto" class="img-fluid img-thumbnail">
+                    <p>
+                        {{ artist.name }}
+                    </p>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
